# personal-mcp-server

./: .gitignore  AUTOMATION_GUIDE.md  CLAUDE.md  LICENSE  Makefile  QUICK_START.md  README.md  SETUP.md  claude_desktop_config.example.json  debug_indexing.py  fix_fd_limit.sh  pyproject.toml
docs/: CHANGELOG.md  CLAUDE.md  MAKEFILE.md  claude-desktop-setup.md  development.md  mcp-concepts.md  memory-management.md  rag-explained.md  troubleshooting.md  usage-examples.md
rag_server/: __init__.py  chunking.py  cli.py  config.py  context_filter.py  embedding_cache.py  errors.py  indexer.py  logging_config.py  rag_mcp_chroma.py  utils.py
scripts/: README.md  benchmark.py  configure_claude.py  doctor.py  pre-commit.sh
tests/: __init__.py  conftest.py  test_chunking.py  test_cli_integration.py  test_config.py  test_context_filter.py  test_embedding_cache.py  test_errors.py  test_indexer.py  test_logging_config.py  test_rag_mcp_server_integration.py  test_utils.py
